# simple

./: 2  ;  Cargo.toml  README.MD  foods.parquet  metadata  modified.parquet  nums1.parquet  nums2.parquet  parse_metadata.py  parsed_metadata.txt  parsed_post_metadata.txt  path.txt  post_insert_metadata.txt  query_res.tx  quick_parsed.txt  teachers.parquet  write_test.txt
src/: lib.rs  main.rs
src/creator/: creator.rs
src/db_interface/: db_interface.rs  mod.rs
src/inserter/: inserter.rs
src/parser/: db_interface.rs  mod.rs  parser.rs
src/tableformatter/: tableformatter.rs
tables/: books.parquet  employees.parquet  foods.parquet  numbers.parquet  numbers1.parquet  numbers_append_only.parquet  numbers_unmodified.parquet  nums1.parquet  nums2.parquet  teachers.parquet  test_table_3.parquet
tables/music_table/: music_table_2.parquet
