[package]
name = "simple_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "43.0.*"
arrow = "43.0.0"
sqlparser = { version = "0.36.*", features = ["visitor"] }
datafusion = "28.0.0"
arrow-schema = "45.0.0"
