[package]
name = "simple_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "47.0.*"
arrow = "47.0.0"
sqlparser = { version = "0.36.*", features = ["visitor"] }
arrow-schema = "47.0.0"
arrow-array = "47.0.0"
